improving service utilities

--- a/org/maxin/services/templates/index.html
+++ b/org/maxin/services/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv='Content-Type' content='text/html; charset=utf-8'>
     <link rel="stylesheet" href="https://openlayers.org/en/v3.19.0/css/ol.css" type="text/css">
     <script type="text/javascript" src="http://openlayers.org/en/v3.12.1/build/ol.js"></script>
-    <script type="text/javascript" src="app/map.js"></script>
+    <script type="text/javascript" src="static/map.js"></script>
 <style>
 body {
     border: 0;
@@ -42,6 +42,6 @@ body {
 <h3 id="item-id"></h3>
 <h3 id="item-desc"></h3>
 </div>
-<script type="text/javascript" src="app/index.js"></script>
+<script type="text/javascript" src="static/index.js"></script>
 </body>
 </html>
